--- a/package.json
+++ b/package.json
@@ -9,36 +9,27 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"db:push": "drizzle-kit push",
-		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
-		"@types/better-sqlite3": "^7.6.12",
 		"@types/node": "^22.10.10",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.23",
-		"drizzle-kit": "^0.30.2",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.10",
 		"svelte": "^5.0.0",
 		"svelte-5-french-toast": "^2.0.4",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.4.11",
+		"vite": "^6.0.11",
 		"zod": "^3.24.1"
-	},
-	"dependencies": {
-		"better-sqlite3": "^11.8.0",
-		"drizzle-orm": "^0.38.4"
 	}
 }
