--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22.10.10",
 		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.23",
+		"daisyui": "^5.0.0-beta.2",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.10",
